header and 1st div added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AGE CALCULATOR</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <section class="container">
+        <h1>AGE CALCULATOR</h1>
+        <form action="#" class="form">
+            <div>
+                <label>Full Name</label>
+            </div>
 </body>
 </html>
