--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 </head>
 <body>
     <section class="container">
-        <h1>AGE CALCULATOR</h1>
+        <header>Registration Form</header>
         <form action="#" class="form">
-            <div>
+            <div class="input-box">
                 <label>Full Name</label>
+                <input type="text" placeholder = "Enter your full name" />
             </div>
+
+            <div class ="input-box">
+                <label>Full Name</label>
+                <input type="text" placeholder = "Enter your full name" />
+            </div>
+        </form> 
+    </section>
+
 </body>
 </html>
